--- a/css/main.css
+++ b/css/main.css
@@ -11,10 +11,10 @@ html, body, .map {
     border-radius: 2px 0 0 2px;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
-    height: 32px;
     outline: none;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-    width: 25vh;
+    width: 700px;
+    height: 50px;
     font-size: 4em;
 }
 
@@ -66,7 +66,7 @@ a:hover {color:#f1f1f1;}
 
 @media (mix-width: 400px) {
     .input-controls-for-gmaps {
-        font-size: 3em;
+        font-size: 2em;
         height: 15vh;
         width: 100vh
     }
